2004-02-14  Nathaniel Smith  <njs@codesourcery.com>

	* qm/common.py (encode_data_as_text): Remove.
	(decode_data_from_text): Likewise.
	(format_byte_count): Likewise.
	
	(base64): Don't import.
	(cPickle): Likewise.
	(cStringIO): Likewise.
	(dircache): Likewise.
	(gzip): Likewise.
	(operator): Likewise.
	(quopri): Likewise.
	(socket): Likewise.

2004-02-13  Mark Mitchell  <mark@codesourcery.com>

	* qm/common.py (open_temporary_file_fd): Add suffix parameter.
	(open_temporary_file): Add mode and suffix parameters.
	* qm/platform.py (get_shell_for_script): Use /c on Windows.
	* qm/test/classes/command.py (ShellScriptTest): Make the 
	script have a ".bat" extension on Windows.
	* NEWS: Mention this fix.

2004-02-11  Nathaniel Smith  <njs@codesourcery.com>

	* qm/fields.py: Use types.StringTypes instead of
	qm.common.string_types.  Also remove tabs.
	* qm/test/result.py: Likewise.
	* qm/common.py (string_types): Remove.
	(Empty): Remove.
	(MutexError): Remove.
	(MutexLockError): Remove.
	(ConfigurationError): Remove.
	(indent_lines): Remove.
	
2004-02-11  Nathaniel Smith  <njs@codesourcery.com>

	* qm/common.py: Import getpass.  
	(get_username): New function.
	* qm/test/execution_engine.py
	(ExecutionEngine._WriteInitialAnnotations): New method.
	(ExecutionEngine.Run): Call it.
	(TerminationRequested): New exception.
	(ExecutionEngine._RunTests): Raise it when terminating.
	(ExecutionEngine.Run): Check for exceptions in _RunTests.
	
	(ExecutionEngine.RequestTermination): More tracing.
	(ExecutionEngine.Run): Likewise.
	(ExecutionEngine._RunTests): Likewise.
	
2004-02-08  Mark Mitchell  <mark@codesourcery.com>

	* NEWS: Remove "Not yet released" markers from news for 2.1.

	* qm/test/web/web.py (ShowSuitePage.MakeDeleteScript): Return the
	result of MakeConfirmationDialog.

2004-02-04  Anders Hasselqvist <Anders.Hasselqvist@tss.teleca.se>

	* qm/fields.py (ChoiceField.FormatValueAsHtml): Make sure there is
	a name for the field.
